--- a/presentes.html
+++ b/presentes.html
@@ -80,29 +80,42 @@
                             <img src="list/buscape.png"></a>
                     </td>
                 </tr>
-                <tr class="">
-                    <td><img src="list/.png"></td>
+                <tr class="ganhei">
+                    <td><img src=""></td>
                     <td>
-                        Forno Elétrico
+                        Fogão
                     </td>
                     <td>
-                        Você?
+                        Nayara e Nayane
                     </td>
                     <td>
                         <a href="" target="_blank">
                             <img src="list/buscape.png"></a>
                     </td>
                 </tr>
-                <tr class="ganhei">
-                    <td><img src="list/.png"></td>
+                <tr class="">
+                    <td><img src="https://encrypted-tbn0.gstatic.com/shopping?q=tbn:ANd9GcTuya4nCBIGZM_TeyfTUDVPtkP_i0KvKly6SGRknLc01btlntGCeaCJoIXkgpH5XMZ8CzOtNpDEwA&usqp=CAc"></td>
                     <td>
-                        Microondas
+                        Forno Elétrico Fischer Grill 1323 de mesa
                     </td>
                     <td>
                         Você?
                     </td>
                     <td>
-                        <a href="" target="_blank">
+                        <a href="https://www.buscape.com.br/fischer-grill-1323-de-mesa" target="_blank">
+                            <img src="list/buscape.png"></a>
+                    </td>
+                </tr>
+                <tr class="ganhei">
+                    <td><img src="https://encrypted-tbn0.gstatic.com/shopping?q=tbn:ANd9GcQADFvvW0rXhNJGFoVg0DoQNUs3mJrbRMHQc19xZNUed16kcYMLxa0&usqp=CAc"></td>
+                    <td>
+                        Microondas LG MS-3059 Prata 30 litros
+                    </td>
+                    <td>
+                        Vovô Antônio e Vovó Maria
+                    </td>
+                    <td>
+                        <a href="https://www.buscape.com.br/lg-ms-3059-prata-30-litros" target="_blank">
                             <img src="list/buscape.png"></a>
                     </td>
                 </tr>
@@ -133,12 +146,12 @@
                     </td>
                 </tr>
                 <tr class="ganhei">
-                    <td><img src="list/.png"></td>
+                    <td><img src=""></td>
                     <td>
                         Airfryer
                     </td>
                     <td>
-                        Você?
+                        Neuriely
                     </td>
                     <td>
                         <a href="" target="_blank">
@@ -159,7 +172,7 @@
                     </td>
                 </tr>
                 <tr class="">
-                    <td><img src="list/.png"></td>
+                    <td><img src=""></td>
                     <td>
                         Jogo de Panelas
                     </td>
@@ -172,7 +185,7 @@
                     </td>
                 </tr>
                 <tr class="">
-                    <td><img src="list/.png"></td>
+                    <td><img src=""></td>
                     <td>
                         Jogo de Jantar
                     </td>
@@ -202,7 +215,7 @@
 
                 <!-- sala -->
                 <tr class="">
-                    <td><img src="list/.png"></td>
+                    <td><img src=""></td>
                     <td>
                         Sofá
                     </td>
@@ -215,7 +228,7 @@
                     </td>
                 </tr>
                 <tr class="">
-                    <td><img src="list/.png"></td>
+                    <td><img src=""></td>
                     <td>
                         Mesa de jantar
                     </td>
@@ -228,7 +241,7 @@
                     </td>
                 </tr>
                 <tr class="">
-                    <td><img src="list/.png"></td>
+                    <td><img src=""></td>
                     <td>
                         Televisão
                     </td>
@@ -244,7 +257,7 @@
 
                 <!-- quarto -->
                 <tr class="ganhei">
-                    <td><img src="list/.png"></td>
+                    <td><img src="https://encrypted-tbn2.gstatic.com/shopping?q=tbn:ANd9GcRuIszyn9zV_oIGcWz_YqSB7sCmEv1MRIDH4TdKb_oFZ0DxSALIC4OnhjRQqr5SDssaw9G4FzL29w&usqp=CAc"></td>
                     <td>
                         Guarda Roupas
                     </td>
@@ -257,7 +270,7 @@
                 </tr>
 
                 <tr class="ganhei">
-                    <td><img src="list/.png"></td>
+                    <td><img src="https://encrypted-tbn2.gstatic.com/shopping?q=tbn:ANd9GcRmqH7-qLSqfe0WiBeHeL5GAjWHk1TvSZN86GbV4wV8vqaIUZAFNGanNOImIcQkaw&usqp=CAc"></td>
                     <td>
                         Cama
                     </td>
@@ -271,7 +284,7 @@
 
 
                 <tr class="">
-                    <td><img src="list/.png"></td>
+                    <td><img src=""></td>
                     <td>
                         MODELO
                     </td>
