--- a/presentes.html
+++ b/presentes.html
@@ -146,15 +146,15 @@
                     </td>
                 </tr>
                 <tr class="ganhei">
-                    <td><img src=""></td>
+                    <td><img src="https://encrypted-tbn0.gstatic.com/shopping?q=tbn:ANd9GcQez2F-4kSAt8YFskx1ToKy8AMnR5llr8EOSzmmGgpbRmgHQtIZMX8&usqp=CAc"></td>
                     <td>
-                        Airfryer
+                        Mondia Air Fryer AF-17
                     </td>
                     <td>
                         Neuriely
                     </td>
                     <td>
-                        <a href="" target="_blank">
+                        <a href="https://www.buscape.com.br/mondial-air-fryer-af-17" target="_blank">
                             <img src="list/buscape.png"></a>
                     </td>
                 </tr>
