--- a/presentes.html
+++ b/presentes.html
@@ -46,6 +46,13 @@
             <div class="col-md-12">
                 <div class="heading">
                     <h2 class="wow fadeInUp lista" data-wow-delay="0.5s">Nossa Lista</h2>
+                    <center>
+                        <b>Achou que eu te chamei para o casamento só por causa do presente? Errou! Mas, não esqueça de escolher com carinho, né?</b>
+                        <br>Os itens que estão de rosa é porque já ganhamos.
+                        <br>Nos diga qual presente que colocamos seu nome na lista.
+                        <br><b>Veja até o finalziho</b>
+                        <img src="list/winking.png" />
+                    </center>
                 </div>
             </div>
         </div>
@@ -464,7 +471,51 @@
                     </td>
                 </tr>
 
+                <tr class="">
+                    <td>
+                        <a href="https://nubank.com.br/pagar/57xo6/YDSff7ugEN" target="_blank">
+                            <img src="list/nu.png"></a>
+                    </td>
+                    <td>
+                        Você também pode nos ajudar a interar algum desses móveis.
+                        <br>Com uma ajudinha aqui e outra alí, logo conseguimos tudo que precisamos...
+                    </td>
+                    <td>
+                        Banco: Nu Pagamentos S.A. (260)
+                        <br>Nome: Guilherme Alves
+                        <br>CPF: 701.878.051-99
+                        <br>Agência: 0001
+                        <br>Conta: 8768310-2
+                    </td>
+                    <td>
+                        <a href="https://api.whatsapp.com/send?phone=5562982564280&text=&source=&data=" target="_blank">
+                            <img src="list/wpp.png"></a>
+                    </td>
+                </tr>
+                <tr class="">
+                    <td>
+                        <a href="https://nubank.com.br/pagar/b897/lOMvrTeaIe" target="_blank">
+                            <img src="list/nu.png"></a>
+                    </td>
+                    <td>
+                        &lt;- Para transferir, basta clicar no botão do Nubank.
+                        <br>Ou enviar para os dados ao lado ->
+                    </td>
+                    <td>
+                        Banco: Nu Pagamentos S.A. (260)
+                        <br>Nome: Maressa Cruvinel Oliveira
+                        <br>CPF: 703.977.761-44
+                        <br>Agência: 0001
+                        <br>Conta: 523915-4
+                    </td>
+                    <td>
+                        <a href="https://api.whatsapp.com/send?phone=5562982289843&text=&source=&data=" target="_blank">
+                            <img src="list/wpp.png"></a>
+                    </td>
+                </tr>
 
+                <!-- 
+    
                 <tr class="">
                     <td><img src=""></td>
                     <td>
@@ -478,7 +529,8 @@
                             <img src="list/buscape.png"></a>
                     </td>
                 </tr>
-
+            
+            -->
 
             </table>
         </div>
