--- a/presentes.html
+++ b/presentes.html
@@ -50,7 +50,7 @@
                         <b>Achou que eu te chamei para o casamento só por causa do presente? Errou! Mas, não esqueça de escolher com carinho, né?</b>
                         <br>Os itens que estão de rosa é porque já ganhamos.
                         <br>Nos diga qual presente que colocamos seu nome na lista.
-                        <br><b>Veja até o finalziho</b>
+                        <br><b>Veja até o finalzinho</b>
                         <img src="list/winking.png" />
                     </center>
                 </div>
@@ -477,7 +477,7 @@
                             <img src="list/nu.png"></a>
                     </td>
                     <td>
-                        Você também pode nos ajudar a interar algum desses móveis.
+                        Você também pode nos ajudar a inteirar algum desses móveis.
                         <br>Com uma ajudinha aqui e outra alí, logo conseguimos tudo que precisamos...
                     </td>
                     <td>
