correcao de imagem

--- a/presentes.html
+++ b/presentes.html
@@ -88,15 +88,15 @@
                     </td>
                 </tr>
                 <tr class="ganhei">
-                    <td><img src=""></td>
+                    <td><img src="https://images-americanas.b2w.io/produtos/01/00/offers/01/00/item/108571/0/108571032_1GG.png"></td>
                     <td>
-                        Fogão
+                        Cooktop 5 bocas
                     </td>
                     <td>
                         Nayara e Nayane
                     </td>
                     <td>
-                        <a href="" target="_blank">
+                        <a href="https://www.buscape.com.br/search/cooktop%205%20bocas" target="_blank">
                             <img src="list/buscape.png"></a>
                     </td>
                 </tr>
