espremedor de laranja

--- a/presentes.html
+++ b/presentes.html
@@ -230,13 +230,13 @@
                             <img src="list/buscape.png"></a>
                     </td>
                 </tr>
-                <tr class="">
+                <tr class="ganhei">
                     <td><img src="https://encrypted-tbn0.gstatic.com/shopping?q=tbn:ANd9GcRhbQM_F7kufGUJz6BrblvA5A6_mLnf2gcOFl1i5UAf7dsiIK5ckixftgbMiqsnoIkIV_OwMLdieoU&usqp=CAc"></td>
                     <td>
                         Espremedor de laranja Inox 500w 3545RPM
                     </td>
                     <td>
-                        Você?
+                        Tio Luiz 
                     </td>
                     <td>
                         <a href="https://www.buscape.com.br/search/espremedor-de-laranja-inox-500w-3545rpm" target="_blank">
