--- a/presentes.html
+++ b/presentes.html
@@ -191,13 +191,13 @@
                             <img src="list/buscape.png"></a>
                     </td>
                 </tr>
-                <tr class="ganhei">
+                <tr class="">
                     <td><img src="https://encrypted-tbn0.gstatic.com/shopping?q=tbn:ANd9GcQez2F-4kSAt8YFskx1ToKy8AMnR5llr8EOSzmmGgpbRmgHQtIZMX8&usqp=CAc"></td>
                     <td>
                         Mondia Air Fryer AF-17
                     </td>
                     <td>
-                        Neuriely
+                        Você?
                     </td>
                     <td>
                         <a href="https://www.buscape.com.br/mondial-air-fryer-af-17" target="_blank">
