--- a/presentes.html
+++ b/presentes.html
@@ -204,13 +204,13 @@
                             <img src="list/buscape.png"></a>
                     </td>
                 </tr>
-                <tr class="">
+                <tr class="ganhei">
                     <td><img src="https://encrypted-tbn0.gstatic.com/shopping?q=tbn:ANd9GcTiJdWXMloPtoih3kaTG-hu-2Na4bVYgwFiWQgmrcUbJjVZZS8iNkTk-C0VP7SP&usqp=CAc"></td>
                     <td>
                         Batedeira Planetária Arno Deluxe Inox SX83
                     </td>
                     <td>
-                        Você?
+                        Maria Silva
                     </td>
                     <td>
                         <a href="https://www.buscape.com.br/planetaria-arno-deluxe-inox-sx83" target="_blank">
