--- a/presentes.html
+++ b/presentes.html
@@ -282,13 +282,13 @@
                             <img src="list/buscape.png"></a>
                     </td>
                 </tr>
-                <tr class="">
+                <tr class="ganhei">
                     <td><img src="https://encrypted-tbn0.gstatic.com/shopping?q=tbn:ANd9GcRGgxML-svZ8oSk_virmpwO46oP5IRqpyztC6lWqMZ6YetQhgiCcA&usqp=CAc"></td>
                     <td>
                         Chaleira Cadence Prime CEL800
                     </td>
                     <td>
-                        Você?
+                        Benivaldo e Branca
                     </td>
                     <td>
                         <a href="https://www.buscape.com.br/cadence-prime-cel800" target="_blank">
@@ -308,13 +308,13 @@
                             <img src="list/buscape.png"></a>
                     </td>
                 </tr>
-                <tr class="">
+                <tr class="ganhei">
                     <td><img src="https://encrypted-tbn0.gstatic.com/shopping?q=tbn:ANd9GcSPsR-lTxakcn2ya3FtwIVvUQjdAlJo-PqEHU5ezHndBDj6vKYF-FhkENKYIrAh&usqp=CAc"></td>
                     <td>
                         Jogo de Panelas Tramontina Solar Inox 6 Peças
                     </td>
                     <td>
-                        Você?
+                        Vovô Roque e Vovó Nair
                     </td>
                     <td>
                         <a href="https://www.buscape.com.br/tramontina-solar-65510233-inox-6-pecas" target="_blank">
