--- a/presentes.html
+++ b/presentes.html
@@ -139,13 +139,13 @@
                             <img src="list/buscape.png"></a>
                     </td>
                 </tr>
-                <tr class="">
+                <tr class="ganhei">
                     <td><img src="https://encrypted-tbn0.gstatic.com/shopping?q=tbn:ANd9GcTuya4nCBIGZM_TeyfTUDVPtkP_i0KvKly6SGRknLc01btlntGCeaCJoIXkgpH5XMZ8CzOtNpDEwA&usqp=CAc"></td>
                     <td>
                         Forno Elétrico Fischer Grill 1323 de mesa
                     </td>
                     <td>
-                        Você?
+                        Pr. Divino e Pra. Edna
                     </td>
                     <td>
                         <a href="https://www.buscape.com.br/fischer-grill-1323-de-mesa" target="_blank">
