--- a/presentes.html
+++ b/presentes.html
@@ -100,7 +100,7 @@
                             <img src="list/buscape.png"></a>
                     </td>
                 </tr>
-                <tr class="">
+<!--                 <tr class="">
                     <td><img src="https://encrypted-tbn2.gstatic.com/shopping?q=tbn:ANd9GcSFnX2loolcAyDMWVGJuwp3JqwLhhCgn6WBLjNk1Rf3owlA-TJYWwP7VmNer0OKkbqyHQNf2AE5q7gBzB72lGG9Fklbl_npuh2N8vr3uoNG&usqp=CAc"></td>
                     <td>
                         Mesa de Jantar 4 Cadeiras Madeira Retangular Rosie Madesa
@@ -112,7 +112,7 @@
                         <a href="https://www.buscape.com.br/4-cadeiras-madeira-retangular-rosie-madesa" target="_blank">
                             <img src="list/buscape.png"></a>
                     </td>
-                </tr>
+                </tr> -->
                 <tr class="">
                     <td><img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSRr8rbutdOH4BUm_YPXe107Z8yNJTbq2ACp7JdHsAtahWC32SsgpqRXqIGN8UV0g&usqp=CAc"></td>
                     <td>
@@ -126,13 +126,13 @@
                             <img src="list/buscape.png"></a>
                     </td>
                 </tr>
-                <tr class="">
+                <tr class="ganhei">
                     <td><img src="https://encrypted-tbn3.gstatic.com/shopping?q=tbn:ANd9GcSmsOfCb1WetCHMgHlJY0zFZC43Rf3P93jT_FfrWsz7FAcaILR66Z7BA3Lx4kTkbg&usqp=CAc"></td>
                     <td>
                         Balcão para Fornos com Estante e Porta Basculante Amsterdã
                     </td>
                     <td>
-                        Você?
+                        Léo e Luiza
                     </td>
                     <td>
                         <a href="https://www.buscape.com.br/search/balcao-para-fornos-com-estante-e-prota-vasculante-amsterda" target="_blank">
@@ -362,13 +362,15 @@
                 </tr>
 
                 <!-- serviço -->
-                <tr class="">
+                <tr class="ganhei">
                     <td><img src="https://encrypted-tbn3.gstatic.com/shopping?q=tbn:ANd9GcSCX6SkLHMmok6w3gKdYjcFHk8QpKnnfHKVdEPIAGTD0OtX_uPbI28L7g_pDPWeA74fcrGjWDIu9GM&usqp=CAc"></td>
                     <td>
                         Brastemp BWT12AB Superior 12 Kg Branco
                     </td>
                     <td>
-                        Você?
+                    	Tio Silvone
+                    	<br/> + 
+                    	<br/>José Valadão
                     </td>
                     <td>
                         <a href="https://www.buscape.com.br/brastemp-bwt12ab-superior-12-kg-branco" target="_blank">
@@ -465,6 +467,19 @@
                     </td>
                     <td>
                         Gustavo e Nayara &lt;3
+                    </td>
+                    <td>
+                        <img src="list/gift.png"></a>
+                    </td>
+                </tr>
+
+                <tr class="ganhei">
+                    <td><img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcR0tpw-uJ6wPFqGsJTI5_6X9d2dJr-tCxfmyvPdRvPVu3wMd7E6K8YX9iG2bhq-Nwg6Sc9P8bmvRzU&usqp=CAc"></td>
+                    <td>
+                        Colchão
+                    </td>
+                    <td>
+                        Maressa e Afonso
                     </td>
                     <td>
                         <img src="list/gift.png"></a>
