--- a/presentes.html
+++ b/presentes.html
@@ -178,13 +178,13 @@
                             <img src="list/buscape.png"></a>
                     </td>
                 </tr>
-                <tr class="">
+                <tr class="ganhei">
                     <td><img src="https://encrypted-tbn0.gstatic.com/shopping?q=tbn:ANd9GcS9cWbZwsIlyKb2HNWjEdyJhUAis2mkOJoxLDOBRuCCJPTxkNwuIQpBDY6RhIVdIWAI6pUSRASJyQ&usqp=CAc"></td>
                     <td>
                         Panela Electrolux Chef ECC20 Multifuncional
                     </td>
                     <td>
-                        Você?
+                        Tio Araujo e Família
                     </td>
                     <td>
                         <a href="https://www.buscape.com.br/electrolux-chef-ecc20-multifuncional" target="_blank">
