--- a/presentes.html
+++ b/presentes.html
@@ -377,13 +377,13 @@
                             <img src="list/buscape.png"></a>
                     </td>
                 </tr>
-                <tr class="">
+                <tr class="ganhei">
                     <td><img src="https://encrypted-tbn0.gstatic.com/shopping?q=tbn:ANd9GcRqhqK6IjcnThfg2wBcRLaR2vcCCBtHKPQ0W_RlldrtdSVdY-JMbFCeIL8u_PVqKdVhPYI_LirHfVI&usqp=CAc"></td>
                     <td>
                         Ferro Arno Ultragliss 41
                     </td>
                     <td>
-                        Você?
+                        Lídia e Débora
                     </td>
                     <td>
                         <a href="https://www.buscape.com.br/arno-ultragliss-41" target="_blank">
