--- a/presentes.html
+++ b/presentes.html
@@ -191,13 +191,13 @@
                             <img src="list/buscape.png"></a>
                     </td>
                 </tr>
-                <tr class="">
+                <tr class="ganhei">
                     <td><img src="https://encrypted-tbn0.gstatic.com/shopping?q=tbn:ANd9GcQez2F-4kSAt8YFskx1ToKy8AMnR5llr8EOSzmmGgpbRmgHQtIZMX8&usqp=CAc"></td>
                     <td>
                         Mondia Air Fryer AF-17
                     </td>
                     <td>
-                        Você?
+                        Elaine
                     </td>
                     <td>
                         <a href="https://www.buscape.com.br/mondial-air-fryer-af-17" target="_blank">
@@ -256,26 +256,26 @@
                             <img src="list/buscape.png"></a>
                     </td>
                 </tr>
-                <tr class="">
+                <tr class="ganhei">
                     <td><img src="http://eletrum.vteximg.com.br/arquivos/ids/160632-450-450/power-mixer-mondial-premium-m-07-preto-110v.png?v=636685676396530000"></td>
                     <td>
                         Mixer Mondial M-07
                     </td>
                     <td>
-                        Você?
+                        Rialdo e Rogério
                     </td>
                     <td>
                         <a href="https://www.buscape.com.br/mondial-m-07" target="_blank">
                             <img src="list/buscape.png"></a>
                     </td>
                 </tr>
-                <tr class="">
+                <tr class="ganhei">
                     <td><img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcS5zPlueg_nguUxcBDn3HCEvct1QPHjSS7NF5uGzctVnFScJ33fqQ839sm7VXT9nws7s6YV1wVClY4&usqp=CAc"></td>
                     <td>
                         Multigrill Cadence Ceramic Pan GRL 350
                     </td>
                     <td>
-                        Você?
+                        Tia Sônia e Tio Luís
                     </td>
                     <td>
                         <a href="https://www.buscape.com.br/multigrill-cadence-ceramic-pan-grl-350" target="_blank">
