presente Gi e Dijo

--- a/presentes.html
+++ b/presentes.html
@@ -88,7 +88,7 @@
                     </td>
                 </tr>
                 <tr class="ganhei">
-                    <td><img src="https://images-americanas.b2w.io/produtos/01/00/offers/01/00/item/108571/0/108571032_1GG.png"></td>
+                    <td><img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcQvSlj_zOowZ8e8Lg7AdbC8-bxOx_YN3FlbVaLj42JtQIc_3QI1YybyCpSVl8ROphVbMAzNb2cdjlo&usqp=CAc"></td>
                     <td>
                         Cooktop 5 bocas
                     </td>
@@ -243,13 +243,13 @@
                             <img src="list/buscape.png"></a>
                     </td>
                 </tr>
-                <tr class="">
+                <tr class="ganhei">
                     <td><img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcRwnUFMTxCdyoq_j1YNVyO2NAJgiiH2c3zY63eoNK0qY_v1l86bmec&usqp=CAc"></td>
                     <td>
                         Kit Philips Walita Viva Collection Power Chop RI7636
                     </td>
                     <td>
-                        Você?
+                        Girlei e Dijo
                     </td>
                     <td>
                         <a href="https://www.buscape.com.br/philips-walita-viva-collection-power-chop-ri7636" target="_blank">
@@ -257,7 +257,7 @@
                     </td>
                 </tr>
                 <tr class="ganhei">
-                    <td><img src="http://eletrum.vteximg.com.br/arquivos/ids/160632-450-450/power-mixer-mondial-premium-m-07-preto-110v.png?v=636685676396530000"></td>
+                    <td><img src="https://encrypted-tbn2.gstatic.com/shopping?q=tbn:ANd9GcQmb-3BZPO8AhmdVP6cpGIFtVAgCwhfbtoCq8U3TASufeq9jfG5oHw&usqp=CAc"></td>
                     <td>
                         Mixer Mondial M-07
                     </td>
@@ -321,13 +321,13 @@
                             <img src="list/buscape.png"></a>
                     </td>
                 </tr>
-                <tr class="">
+                <tr class="ganhei">
                     <td><img src="https://encrypted-tbn0.gstatic.com/shopping?q=tbn:ANd9GcQUK7RQ8hzQgu5xgaBCkBolLE0QFbJQrwb8mqmwqFRhAzRvbp4uoA&usqp=CAc"></td>
                     <td>
                         Jogo de Jantar Schmidt Prisma 42 Peças
                     </td>
                     <td>
-                        Você?
+                        Girlei e Dijo
                     </td>
                     <td>
                         <a href="https://www.buscape.com.br/schmidt-prisma-42-pecas" target="_blank">
