Atualização do botao

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <div id="time"></div>
                 <h4 class="fadeIn wow animated" data-wow-delay="1.2s">contando...</h4>
                 <div class="btn-special slideInUp wow animated page-scroll" data-wow-delay="0.7s">
-                    <a href="#about"><span>Veja mais</span></a>
+                    <a href="https://goo.gl/maps/U1v9rKZU76t" target="_blank"><span>Como chegar</span></a>
                 </div>
             </div>
             <div class="item active">
